# rust-example

./: Cargo.toml  Dockerfile  README.md  build.rs  client.py  cloudbuild.yaml  myobj_pb2.py
src/: main.rs  myobj.proto
