[package]
name = "rust-example"
version = "0.3.0"
authors = ["yukitaka <s.yukkiy@gmail.com>"]
build = "build.rs"

[dependencies]
bytes = "0.4"
env_logger = "*"

prost = "0.5.0"
prost-derive = "0.5.0"
prost-types = "0.5.0"

actix = "0.8.1"
actix-web = "1"
actix-protobuf = "0.4.1"

[build-dependencies]
prost-build = "0.5.0"
