[package]
name = "rust-example"
version = "0.4.0"
edition = "2021"
authors = ["yukitaka <s.yukkiy@gmail.com>"]
build = "build.rs"

[dependencies]
env_logger = "0.9"

prost = { version = "0.9", default_features = false, features = ["prost-derive"] }

actix-web = "4"
actix-protobuf = "0.7"

[build-dependencies]
prost-build = "0.10"
